--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-foobar
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style type="text/css">
+        body {
+          background-color: #000000;
+        }
+        </style>
+
+        <style>.embed-containers { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 100%; overflow: hidden; max-width: 100%; height: auto; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style>
+    </head>
+    <body>
+        <div class='embed-container'><iframe src='https://player.vimeo.com/video/74559015' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+    </body>
+</html>
