--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Winnie &amp; Gerran - Save the Date</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
         <style type="text/css">
