--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <style>.embed-containers { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 100%; overflow: hidden; max-width: 100%; height: auto; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style>
     </head>
     <body>
-        <div class='embed-container'><iframe src='https://player.vimeo.com/video/97240725?autoplay=1&title=0&byline=0' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+        <div class='embed-container'><iframe src='https://player.vimeo.com/video/97240725?autoplay=1&title=0&byline=0&portrait=0' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
     </body>
 </html>
